# serializer version: 1
# name: test_assay_writer_BII_I_1
  list([
    "<class 'altamisa.exceptions.ParseIsatabWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.CriticalIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
  ])
# ---
# name: test_assay_writer_BII_I_1.1
  list([
    'Skipping empty ontology source: , , , ',
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot1', name='C-0.1-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.07-aliquot8', name='P-0.07-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.07-aliquot9', name='P-0.07-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot8', name='P-0.1-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot9', name='P-0.1-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot10', name='P-0.1-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot8', name='P-0.2-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot9', name='P-0.2-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot10', name='P-0.2-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot8', name='N-0.07-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot9', name='N-0.07-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot10', name='N-0.07-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot8', name='N-0.1-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot9', name='N-0.1-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot10', name='N-0.1-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot8', name='N-0.2-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot9', name='N-0.2-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot10', name='N-0.2-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot8', name='C-0.07-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot9', name='C-0.07-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot10', name='C-0.07-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot8', name='C-0.1-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot9', name='C-0.1-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot10', name='C-0.1-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot8', name='C-0.2-aliquot8', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot9', name='C-0.2-aliquot9', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot10', name='C-0.2-aliquot10', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot4', name='G-0.07-aliquot4', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot5', name='G-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot6', name='G-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot4', name='G-0.1-aliquot4', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot5', name='G-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot6', name='G-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot4', name='G-0.2-aliquot4', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot5', name='G-0.2-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot6', name='G-0.2-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot1', name='E-0.07-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot2', name='E-0.07-aliquot2', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot3', name='E-0.07-aliquot3', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot1', name='E-0.1-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot2', name='E-0.1-aliquot2', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot3', name='E-0.1-aliquot3', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='intracellular', accession='http://purl.obolibrary.org/obo/GO_0005622', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.07-aliquot6', name='S-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.07-aliquot7', name='S-0.07-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.07-aliquot5', name='S-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.1-aliquot5', name='S-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.1-aliquot6', name='S-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.2-aliquot5', name='S-0.2-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.2-aliquot6', name='S-0.2-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-S-0.2-aliquot7', name='S-0.2-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.07-aliquot6', name='P-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.07-aliquot7', name='P-0.07-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.07-aliquot5', name='P-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot5', name='P-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot6', name='P-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.1-aliquot7', name='P-0.1-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot5', name='P-0.2-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot6', name='P-0.2-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-P-0.2-aliquot7', name='P-0.2-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot5', name='N-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot6', name='N-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.07-aliquot7', name='N-0.07-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot5', name='N-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot6', name='N-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.1-aliquot7', name='N-0.1-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot5', name='N-0.2-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot6', name='N-0.2-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-N-0.2-aliquot7', name='N-0.2-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot5', name='C-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot6', name='C-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.07-aliquot7', name='C-0.07-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot5', name='C-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot6', name='C-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.1-aliquot7', name='C-0.1-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot5', name='C-0.2-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot6', name='C-0.2-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-C-0.2-aliquot7', name='C-0.2-aliquot7', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot1', name='G-0.07-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot2', name='G-0.07-aliquot2', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.07-aliquot3', name='G-0.07-aliquot3', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot1', name='G-0.1-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot2', name='G-0.1-aliquot2', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.1-aliquot3', name='G-0.1-aliquot3', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot1', name='G-0.2-aliquot1', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot2', name='G-0.2-aliquot2', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-G-0.2-aliquot3', name='G-0.2-aliquot3', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot4', name='E-0.07-aliquot4', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot5', name='E-0.07-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.07-aliquot6', name='E-0.07-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot4', name='E-0.1-aliquot4', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot5', name='E-0.1-aliquot5', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    "Found annotated Sample in assay (should be annotated in studies only): Material(type='Sample Name', unique_name='S1-sample-E-0.1-aliquot6', name='E-0.1-aliquot6', extract_label=None, characteristics=(), comments=(), factor_values=(), material_type=OntologyTermRef(name='extracellular region part', accession='http://purl.obolibrary.org/obo/GO_0044421', ontology_name='CL'), headers=['Sample Name', 'Material Type', 'Term Source REF', 'Term Accession Number'])",
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "MS Assay Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Normalization Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Data Transformation Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Scan Name"',
  ])
# ---
# name: test_assay_writer_gelelect
  list([
    'Skipping empty ontology source: , , , ',
    '''
      Investigation with only one study contains metadata:
      	ID:	1551099271112
      	Title:	Investigation
      	Path:	i_Investigation.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Study without title:
      ID:	study01
      Title:	
      Path:	s_study01.txt
    ''',
    '"Normalization Name" not supported by protocol type "normalization" (only "data normalization")',
    '"Normalization Name" not supported by protocol type "normalization" (only "data normalization")',
  ])
# ---
# name: test_assay_writer_minimal2_assay
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_minimal
      	Title:	Minimal Investigation
      	Path:	i_minimal2.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_minimal2.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_assay_writer_minimal_assay
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_minimal
      	Title:	Minimal Investigation
      	Path:	i_minimal.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_minimal.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
  ])
# ---
# name: test_assay_writer_small2_assay
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_small2
      	Title:	Small Investigation
      	Path:	i_small2.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
  ])
# ---
# name: test_assay_writer_small_assay
  list([
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
    "<class 'altamisa.exceptions.AdvisoryIsaValidationWarning'>",
    "<class 'altamisa.exceptions.ModerateIsaValidationWarning'>",
  ])
# ---
# name: test_assay_writer_small_assay.1
  list([
    '''
      Investigation with only one study contains metadata:
      	ID:	i_small
      	Title:	Small Investigation
      	Path:	i_small.txt
      	Description:	
      	Submission Date:	None
      	Public Release Date:	None
      	Prefer recording metadata in the study section.
    ''',
    '''
      Assay without platform:
      Path:	a_small.txt
      Measurement Type:	exome sequencing assay
      Technology Type:	nucleotide sequencing
      Technology Platform:	
    ''',
    'Can\'t validate parameter values and names for process with undeclared protocol "Unknown" and name type "Data Transformation Name"',
  ])
# ---
